--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^1.1.0
+  math_expressions: ^2.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
